--- a/InterfaceAppPresentationLayer/AddTrainingWindow.xaml
+++ b/InterfaceAppPresentationLayer/AddTrainingWindow.xaml
@@ -125,7 +125,7 @@
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
                                 <TextBlock x:Name="CountTotal" Text="N/A" FontFamily="Champagne &amp; Limousines" Foreground="White" FontSize="50"/>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20" Cursor="Hand">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
                                 <materialDesign:PackIcon Kind="InfoOutline" Foreground="#FF6195F1" Width="15" Height="15" VerticalAlignment="Center" Margin="5 0"/>
                                 <TextBlock Text="All passed trainings " FontSize="11" Foreground="#FF979797"/>
                             </StackPanel>
@@ -148,7 +148,7 @@
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
                                 <TextBlock x:Name="CountRunning" Text="N/A" FontFamily="Champagne &amp; Limousines" Foreground="White" FontSize="50"/>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20" Cursor="Hand">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
                                 <materialDesign:PackIcon Kind="InfoOutline" Foreground="#FF6195F1" Width="15" Height="15" VerticalAlignment="Center" Margin="5 0"/>
                                 <TextBlock Text="All running trainings" FontSize="11" Foreground="#FF979797"/>
                             </StackPanel>
@@ -171,7 +171,7 @@
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
                                 <TextBlock x:Name="CountCicle" Text="N/A" FontFamily="Champagne &amp; Limousines" Foreground="White" FontSize="50"/>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20" Cursor="Hand">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
                                 <materialDesign:PackIcon Kind="InfoOutline" Foreground="#FF6195F1" Width="15" Height="15" VerticalAlignment="Center" Margin="5 0"/>
                                 <TextBlock Text="All bicicle trainings" FontSize="11" Foreground="#FF979797"/>
                             </StackPanel>
@@ -197,10 +197,10 @@
 
                                     <Grid Grid.Column="0">
                                         <TextBlock Margin="5 0 0 50" Text="Date &amp; time" Foreground="White" />
-                                        <DatePicker Margin="5" />
+                                        <DatePicker x:Name="InputDate" Margin="5" materialDesign:HintAssist.Hint="Select date" />
                                     </Grid>
                                     <Grid Grid.Column="1">
-                                        <materialDesign:TimePicker Margin="5" />
+                                        <materialDesign:TimePicker x:Name="InputTime" Margin="5" />
                                     </Grid>
                                 </Grid>
 
@@ -213,7 +213,7 @@
 
                                     <Grid Grid.Column="0">
                                         <TextBlock Margin="5 0 0 50" Text="Training type" Foreground="White" />
-                                        <ComboBox  Margin="5">
+                                        <ComboBox x:Name="InputTrainingType" Margin="5">
                                             <ComboBoxItem>
                                                 <TextBlock>Recovery</TextBlock>
                                             </ComboBoxItem>
@@ -227,7 +227,7 @@
                                     </Grid>
                                     <Grid Grid.Column="1">
                                         <TextBlock Margin="5 0 0 50" Text="Sport type" Foreground="White" />
-                                        <ComboBox  Margin="5">
+                                        <ComboBox x:Name="InputSportType" Margin="5">
                                             <ComboBoxItem>
                                                 <TextBlock>Running</TextBlock>
                                             </ComboBoxItem>
@@ -238,7 +238,7 @@
                                     </Grid>
                                     <Grid Grid.Column="2">
                                         <TextBlock Margin="5 0 0 50" Text="Bicycle type" Foreground="White" />
-                                        <ComboBox  Margin="5">
+                                        <ComboBox x:Name="InputBikeType" Margin="5">
                                             <ComboBoxItem>
                                                 <TextBlock>Mountain Bike</TextBlock>
                                             </ComboBoxItem>
@@ -251,6 +251,46 @@
                                         </ComboBox>
                                     </Grid>
                                 </Grid>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <Grid Grid.Column="0">
+                                        <TextBlock Margin="5 0 0 50" Text="Length" Foreground="White" />
+                                        <TextBox x:Name="InputLength" Margin="5" materialDesign:HintAssist.Hint="40" materialDesign:HintAssist.HelperText="Length is in km" Height="25" Foreground="White" />
+                                    </Grid>
+                                    <Grid Grid.Column="1">
+                                        <TextBlock Margin="5 0 0 50" Text="Duration" Foreground="White" />
+                                        <TextBox x:Name="InputDuration" Margin="5" materialDesign:HintAssist.Hint="01:30" materialDesign:HintAssist.HelperText="Duration is in hours : minutes" Height="25" Foreground="White" />
+                                    </Grid>
+                                </Grid>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Grid Grid.Column="0">
+                                        <TextBox x:Name="InputComment"
+                                             TextWrapping="Wrap" VerticalAlignment="Stretch"
+                                             Margin="5"
+                                             Foreground="White"
+                                             AcceptsReturn="True"
+                                             VerticalScrollBarVisibility="Auto"
+                                             SpellCheck.IsEnabled="True"
+                                             materialDesign:HintAssist.Hint="Comment"
+                                             materialDesign:HintAssist.HelperText="Not obligated"
+                                             Height="60" />
+                                    </Grid>
+                                    <Grid Grid.Column="1">
+                                        <Button x:Name="SaveButton" MaxWidth="150" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="5" Click="FormSaveClickEevent">Save Training</Button>
+                                    </Grid>
+                                </Grid>
+
                             </StackPanel>
                         </Grid>
                     </Grid>
