--- a/InterfaceAppPresentationLayer/AddTrainingPage.xaml
+++ b/InterfaceAppPresentationLayer/AddTrainingPage.xaml
@@ -147,7 +147,7 @@
                                 </Grid.Effect>
                                 <materialDesign:PackIcon Kind="Run" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10" Foreground="White" Width="20" Height="20"/>
                             </Grid>
-                            <TextBlock Text="Total running trainings" HorizontalAlignment="Right" FontFamily="Champagne &amp; Limousines" Margin="5" VerticalAlignment="Top" Foreground="White"/>
+                            <TextBlock Text="Running Trainings" HorizontalAlignment="Right" FontFamily="Champagne &amp; Limousines" Margin="5" VerticalAlignment="Top" Foreground="White"/>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
                                 <TextBlock x:Name="CountRunning" Text="N/A" FontFamily="Champagne &amp; Limousines" Foreground="White" FontSize="50"/>
                             </StackPanel>
@@ -218,7 +218,7 @@
                                         <TextBlock Margin="5 0 0 50" Text="Training type" Foreground="White" />
                                         <ComboBox x:Name="InputTrainingType" Margin="5">
                                             <ComboBoxItem>
-                                                <TextBlock>Recovery</TextBlock>
+                                                <TextBlock>Recuperation</TextBlock>
                                             </ComboBoxItem>
                                             <ComboBoxItem>
                                                 <TextBlock>Endurance</TextBlock>
@@ -230,7 +230,7 @@
                                     </Grid>
                                     <Grid Grid.Column="1">
                                         <TextBlock Margin="5 0 0 50" Text="Sport type" Foreground="White" />
-                                        <ComboBox x:Name="InputSportType" Margin="5">
+                                        <ComboBox x:Name="InputSportType" Margin="5" SelectionChanged="SportTypeChangeEvent">
                                             <ComboBoxItem>
                                                 <TextBlock>Running</TextBlock>
                                             </ComboBoxItem>
@@ -240,7 +240,7 @@
                                         </ComboBox>
                                     </Grid>
                                     <Grid Grid.Column="2">
-                                        <TextBlock Margin="5 0 0 50" Text="Bicycle type" Foreground="White" />
+                                        <TextBlock x:Name="InputBikeTypeLabel" Margin="5 0 0 50" Text="Bicycle type" Foreground="White" />
                                         <ComboBox x:Name="InputBikeType" Margin="5">
                                             <ComboBoxItem>
                                                 <TextBlock>Mountain Bike</TextBlock>
@@ -250,6 +250,9 @@
                                             </ComboBoxItem>
                                             <ComboBoxItem>
                                                 <TextBlock>Racing Bike</TextBlock>
+                                            </ComboBoxItem>
+                                            <ComboBoxItem>
+                                                <TextBlock>City Bike</TextBlock>
                                             </ComboBoxItem>
                                         </ComboBox>
                                     </Grid>
@@ -312,25 +315,25 @@
                         <TextBlock HorizontalAlignment="Center" Text="DASHBOARD" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" IsEnabled="False">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Add" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="ADD TRAINING" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" Click="MenuRunningRapportClickEvent">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Run" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="RUNNING RAPPORT" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" Click="MenuCyclingRapportClickEevent">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Cycling" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="CYCILING RAPPORT" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" Click="MenuTrainingRapportClickEevent">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Weight" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="TRAINING RAPPORT" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
