--- a/InterfaceAppPresentationLayer/DashboardPage.xaml
+++ b/InterfaceAppPresentationLayer/DashboardPage.xaml
@@ -1,14 +1,18 @@
-﻿<Window xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"  
-        x:Class="InterfaceAppPresentationLayer.AddTrainingWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Background="{DynamicResource MaterialDesignPaper}"
+﻿<Page xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"  
+      x:Class="InterfaceAppPresentationLayer.DashboardPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:InterfaceAppPresentationLayer"
+      Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        Title="Trainings Manager" Height="600" Width="1080" MinWidth="1080" MinHeight="600">
-    <Window.Resources>
+      mc:Ignorable="d" 
+      d:DesignHeight="600" d:DesignWidth="1080"
+      Title="Add Training" MinWidth="1080" MinHeight="600" WindowWidth="1080" WindowHeight="600"
+      WindowTitle="Training Manager">
+    
+    <Page.Resources>
         <ResourceDictionary>
             <Style x:Key="ScrollThumbs" TargetType="{x:Type Thumb}">
                 <Setter Property="Template">
@@ -86,7 +90,7 @@
                 </Setter>
             </Style>
         </ResourceDictionary>
-    </Window.Resources>
+    </Page.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -125,7 +129,7 @@
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
                                 <TextBlock x:Name="CountTotal" Text="N/A" FontFamily="Champagne &amp; Limousines" Foreground="White" FontSize="50"/>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20" Cursor="Hand">
                                 <materialDesign:PackIcon Kind="InfoOutline" Foreground="#FF6195F1" Width="15" Height="15" VerticalAlignment="Center" Margin="5 0"/>
                                 <TextBlock Text="All passed trainings " FontSize="11" Foreground="#FF979797"/>
                             </StackPanel>
@@ -144,11 +148,11 @@
                                 </Grid.Effect>
                                 <materialDesign:PackIcon Kind="Run" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10" Foreground="White" Width="20" Height="20"/>
                             </Grid>
-                            <TextBlock Text="Total running trainings" HorizontalAlignment="Right" FontFamily="Champagne &amp; Limousines" Margin="5" VerticalAlignment="Top" Foreground="White"/>
+                            <TextBlock Text="Running Trainings" HorizontalAlignment="Right" FontFamily="Champagne &amp; Limousines" Margin="5" VerticalAlignment="Top" Foreground="White"/>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
                                 <TextBlock x:Name="CountRunning" Text="N/A" FontFamily="Champagne &amp; Limousines" Foreground="White" FontSize="50"/>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20" Cursor="Hand">
                                 <materialDesign:PackIcon Kind="InfoOutline" Foreground="#FF6195F1" Width="15" Height="15" VerticalAlignment="Center" Margin="5 0"/>
                                 <TextBlock Text="All running trainings" FontSize="11" Foreground="#FF979797"/>
                             </StackPanel>
@@ -171,7 +175,7 @@
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
                                 <TextBlock x:Name="CountCycling" Text="N/A" FontFamily="Champagne &amp; Limousines" Foreground="White" FontSize="50"/>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20" Cursor="Hand">
                                 <materialDesign:PackIcon Kind="InfoOutline" Foreground="#FF6195F1" Width="15" Height="15" VerticalAlignment="Center" Margin="5 0"/>
                                 <TextBlock Text="All bicicle trainings" FontSize="11" Foreground="#FF979797"/>
                             </StackPanel>
@@ -186,112 +190,35 @@
                             </Grid.OpacityMask>
                             <Border x:Name="BorderG1" CornerRadius="5" Background="#FF535353"/>
                             <StackPanel Margin="10">
+                                <StackPanel HorizontalAlignment="Right" Width="241" Height="46" Orientation="Horizontal">
+                                    <Button Margin="5" Width="121" Height="30" Click="DataDeleteAllClickEvent">
+                                        <Grid Width="90">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="9*"/>
+                                                <RowDefinition/>
+                                            </Grid.RowDefinitions>
+                                            <materialDesign:PackIcon Kind="Close" VerticalAlignment="Center" Height="20" Width="20"/>
+                                            <TextBlock HorizontalAlignment="Right" Text="DELETE ALL" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="20"/>
+                                        </Grid>
+                                    </Button>
+                                    <Button Margin="5" Width="100" Height="30" Click="DataDeleteClickEvent">
+                                        <Grid Width="90">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="9*"/>
+                                                <RowDefinition/>
+                                            </Grid.RowDefinitions>
+                                            <materialDesign:PackIcon Kind="Close" VerticalAlignment="Center" Height="20" Width="20"/>
+                                            <TextBlock HorizontalAlignment="Center" Text="DELETE" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="20"/>
+                                        </Grid>
+                                    </Button>
+                                </StackPanel>
 
-                                <TextBlock Margin="5 0 0 20" FontSize="22" Foreground="White">Add New Training</TextBlock>
-                                
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="1*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <Grid Grid.Column="0">
-                                        <TextBlock Margin="5 0 0 50" Text="Date &amp; time" Foreground="White" />
-                                        <DatePicker x:Name="InputDate" Margin="5" materialDesign:HintAssist.Hint="Select date" />
-                                    </Grid>
-                                    <Grid Grid.Column="1">
-                                        <materialDesign:TimePicker x:Name="InputTime" Margin="5" />
-                                    </Grid>
-                                </Grid>
-
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="1*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <Grid Grid.Column="0">
-                                        <TextBlock Margin="5 0 0 50" Text="Training type" Foreground="White" />
-                                        <ComboBox x:Name="InputTrainingType" Margin="5">
-                                            <ComboBoxItem>
-                                                <TextBlock>Recovery</TextBlock>
-                                            </ComboBoxItem>
-                                            <ComboBoxItem>
-                                                <TextBlock>Endurance</TextBlock>
-                                            </ComboBoxItem>
-                                            <ComboBoxItem>
-                                                <TextBlock>Interval</TextBlock>
-                                            </ComboBoxItem>
-                                        </ComboBox>
-                                    </Grid>
-                                    <Grid Grid.Column="1">
-                                        <TextBlock Margin="5 0 0 50" Text="Sport type" Foreground="White" />
-                                        <ComboBox x:Name="InputSportType" Margin="5">
-                                            <ComboBoxItem>
-                                                <TextBlock>Running</TextBlock>
-                                            </ComboBoxItem>
-                                            <ComboBoxItem>
-                                                <TextBlock>Cicling</TextBlock>
-                                            </ComboBoxItem>
-                                        </ComboBox>
-                                    </Grid>
-                                    <Grid Grid.Column="2">
-                                        <TextBlock Margin="5 0 0 50" Text="Bicycle type" Foreground="White" />
-                                        <ComboBox x:Name="InputBikeType" Margin="5">
-                                            <ComboBoxItem>
-                                                <TextBlock>Mountain Bike</TextBlock>
-                                            </ComboBoxItem>
-                                            <ComboBoxItem>
-                                                <TextBlock>Indoor Bike</TextBlock>
-                                            </ComboBoxItem>
-                                            <ComboBoxItem>
-                                                <TextBlock>Racing Bike</TextBlock>
-                                            </ComboBoxItem>
-                                        </ComboBox>
-                                    </Grid>
-                                </Grid>
-
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="1*"/>
-                                    </Grid.ColumnDefinitions>
-                                    
-                                    <Grid Grid.Column="0">
-                                        <TextBlock Margin="5 0 0 50" Text="Length" Foreground="White" />
-                                        <TextBox x:Name="InputLength" Margin="5" materialDesign:HintAssist.Hint="40" materialDesign:HintAssist.HelperText="Length is in km" Height="25" Foreground="White" />
-                                    </Grid>
-                                    <Grid Grid.Column="1">
-                                        <TextBlock Margin="5 0 0 50" Text="Duration" Foreground="White" />
-                                        <TextBox x:Name="InputDuration" Margin="5" materialDesign:HintAssist.Hint="01:30:00" materialDesign:HintAssist.HelperText="Duration is in hours : minutes : seconds" Height="25" Foreground="White" />
-                                    </Grid>
-                                </Grid>
-
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="1*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <Grid Grid.Column="0">
-                                        <TextBox x:Name="InputComment"
-                                             TextWrapping="Wrap" VerticalAlignment="Stretch"
-                                             Margin="5"
-                                             Foreground="White"
-                                             AcceptsReturn="True"
-                                             VerticalScrollBarVisibility="Auto"
-                                             SpellCheck.IsEnabled="True"
-                                             materialDesign:HintAssist.Hint="Comment"
-                                             materialDesign:HintAssist.HelperText="Not obligated"
-                                             Height="60" />
-                                    </Grid>
-                                    <Grid Grid.Column="1">
-                                        <Button x:Name="SaveButton" MaxWidth="150" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="5" Click="FormSaveClickEevent">Save Training</Button>
-                                    </Grid>
-                                </Grid>
-
+                                <DataGrid x:Name="DataTable" IsReadOnly="True" Background="#FF535353" SelectedItem="{Binding Path=SelectedItem, Mode=TwoWay}" AutoGeneratingColumn="DataTableAutoGeneratingColumn">
+                            
+                                </DataGrid>
                             </StackPanel>
+
+
                         </Grid>
                     </Grid>
                 </Grid>
@@ -303,31 +230,31 @@
             <StackPanel>
                 <Image Height="140" Source="https://hogent.timdesmet.be/pro4/training/background.png" />
 
-                <Button Margin="10" Width="230" Height="50" Click="MenuDashboardClickEvent">
+                <Button Margin="10" Width="230" Height="50" IsEnabled="False">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="ViewDashboard" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="DASHBOARD" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" Click="MenuAddTrainingClickEvent">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Add" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="ADD TRAINING" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" Click="MenuRunningRapportClickEvent">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Run" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="RUNNING RAPPORT" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" Click="MenuCyclingRapportClickEevent">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Cycling" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="CYCILING RAPPORT" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
                     </Grid>
                 </Button>
-                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left">
+                <Button Margin="10" Width="230" Height="50" HorizontalAlignment="Left" Click="MenuTrainingRapportClickEevent">
                     <Grid Width="200">
                         <materialDesign:PackIcon Kind="Weight" VerticalAlignment="Center" Height="28" Width="28"/>
                         <TextBlock HorizontalAlignment="Center" Text="TRAINING RAPPORT" FontFamily="Segoe UI"  VerticalAlignment="Center" Height="21"/>
@@ -338,5 +265,5 @@
         </Grid>
 
     </Grid>
-</Window>
+</Page>
  
